@@ -161,7 +161,8 @@ public:
 	STDMETHOD(get_Visible)(/*[out, retval]*/ VARIANT_BOOL *pVal);
 	STDMETHOD(put_Visible)(/*[in]*/ VARIANT_BOOL newVal);
 	STDMETHOD(get_EnableLighting)(/*[out, retval]*/ VARIANT_BOOL *pVal);
-	STDMETHOD(put_EnableLighting)(/*[in]*/ VARIANT_BOOL newVal);
+    STDMETHOD(put_EnableLighting)(/*[in]*/ VARIANT_BOOL newVal);
+    STDMETHOD(get_CurrentAngle)(/*[out, retval]*/ float *pVal);
 };
 
 #endif // !defined(AFX_GATE_H__EDC63CB2_226F_4606_99A9_0C2DB8FE1E3B__INCLUDED_)
